# Netology-Homework-CPP

Block12_The_final_module_of_the_profession_is_a_C++_Developer/Diploma_project_Search_engine/Finder/: CMakeLists.txt  index.html  main.cpp  styles.css
Block12_The_final_module_of_the_profession_is_a_C++_Developer/Diploma_project_Search_engine/Spider/: CMakeLists.txt  HTTPclient.cpp  HTTPclient.h  ParcerHTML.cpp  configuration.ini
Block3/Lesson1/Task1/: ConsoleApplication1.cpp
Block3/Lesson1/Task2/: ConsoleApplication2.sln  ConsoleApplication2.vcxproj
Block3/Lesson3/Task1/: out.txt  (+3 more)
Block3_Basic_programming_in_C++/Lesson1/: readme.md
Block3_Basic_programming_in_C++/Lesson10_Building_and_connecting_libraries/: readme.md
Block3_Basic_programming_in_C++/Lesson2_Classes_and_objects/: readme.md
Block3_Basic_programming_in_C++/Lesson3_OOP_Abstraction_and_encapsulation/: readme.md
Block3_Basic_programming_in_C++/Lesson4_OOP_Inheritance_and_polymorphism/: readme.md
Block3_Basic_programming_in_C++/Lesson5_Multi-file_projects_and_libraries/: readme.md
Block3_Basic_programming_in_C++/Lesson6_Preprocessor_and_macros/: readme.md
Block3_Basic_programming_in_C++/Lesson7_Exceptions_and_error_handling/: readme.md
Block3_Basic_programming_in_C++/Lesson8_Operator_overloading/: readme.md
Block3_Basic_programming_in_C++/Lesson9_CMake/: readme.md
Block3_Basic_programming_in_C++/Lesson9_CMake/CMakeFigure/: CMakeLists.txt  readme.md
Block5/Lesson3_The_life_cycle_of_the_object_RAII/: readme.md
Block5/Lesson4_testing/: readme.md
Block5/Lesson6 STL 1/: readme.md
Block5/Lesson6_STL_1/: readme.md
Block5/Lesson7/: readme.md
Block5_Advanced_C++_programming/Course project (INI File Parser)/: CMakeLists.txt  ConsoleApplication1.cpp  Parser.cpp  Parser.h  main.cpp
Block5_Advanced_C++_programming/Lesson3_The_life_cycle_of_the_object_RAII/: readme.md
Block5_Advanced_C++_programming/Lesson4_testing/: readme.md
Block5_Advanced_C++_programming/Lesson5_templation_and_functors/: readme.md
Block5_Advanced_C++_programming/Lesson6_STL_1/: readme.md
Block5_Advanced_C++_programming/Lesson7_STL_2/: readme.md
Block5_Advanced_C++_programming/Lesson8_Smart_pointers/: readme.md
Block5_Advanced_C++_programming/Lesson9_Move-semantics/: readme.md
Block6_Working_with_databases/Lesson2_Working_with_PostgreSQL._Creating_a_database/: Script.sql
Block6_Working_with_databases/Lesson5_Working_with_PostgreSQL_from_C++/: CMakeLists.txt  DB.cpp  DB.h  main.cpp  readme.md
Block6_Working_with_databases/Lesson6_C++_and_DB._ORM/: DatabaseScheme.h  main.cpp
Block7_Multithreaded_and_asynchronous_programming/Course_project_Thread-safe_queue/: Thread_safe_Queue.cpp  safe_queue.h  thread_pool.cpp  thread_pool.h
Block7_Multithreaded_and_asynchronous_programming/Lesson2_Competition,_the_state_of_the_race._Race_condition/: readme.md
Block8_Design_patterns_in_C++/Lesson1_Creating_templates_Builder,_Singleton,_Factory_Method,_Abstract_Factory,_Prototype/: ConsoleApplication1.cpp  sql_query_builder.cpp  sql_query_builder.h
Block9_Cross-platform_development_on_Qt/Final_job_Airport_Inspector/: CMakeLists.txt  CheckList.xlsx
Block9_Cross-platform_development_on_Qt/Lesson10_Working_with_the_network._TCP_client/: mainwindow.cpp  structs.h  tcpclient.cpp
Block9_Cross-platform_development_on_Qt/Lesson2_Basic_Qt_Modules/: CMakeLists.txt  main.cpp
Block9_Cross-platform_development_on_Qt/Lesson3_Qt_Designer/: CMakeLists.txt  dialog.ui
Block9_Cross-platform_development_on_Qt/Lesson4_Widgets/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Block9_Cross-platform_development_on_Qt/Lesson5_Slots_and_signals/: mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
Block9_Cross-platform_development_on_Qt/Lesson6_QtConcurrent/: mainwindow.cpp
Block9_Cross-platform_development_on_Qt/Lesson7_Drawing_graphs/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Block9_Cross-platform_development_on_Qt/Lesson9_Working_with_the_network._UDP_client/: mainwindow.cpp  mainwindow.h  udpworker.cpp  udpworker.h
(+486 files in other folders)
