cmake_minimum_required(VERSION 3.22.0)
project(Figure)
add_executable(Figure source.cpp Chutyrehangle.cpp Chutyrehangle.h EquilateralTriangle.cpp EquilateralTriangle.h IsoscelesTriangle.cpp IsoscelesTriangle.h Parallelogram.cpp Parallelogram.h Rectangle.cpp Rectangle.h Rhombus.cpp Rhombus.h RightTriangle.cpp RightTriangle.h Square.cpp Square.h Triangle.cpp Triangle.h)